# DS_PROJECT

./: .gitignore  COMPREHENSIVE_TEST_GUIDE.md  Dockerfile  FAILOVER_MAPPING_GUIDE.md  METRICS_GUIDE.md  README.md  RUNNING_DISTRIBUTED_TESTS.md  TESTING_SETUP_EXPLAINED.md  docker-compose.yml  pyproject.toml
artifacts/metrics/: metrics_results.csv  metrics_results.json  metrics_results.md
distributed_cache/: __init__.py  entrypoint.py  node_app.py
distributed_cache.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
distributed_cache/api/: __init__.py  app.py  schemas.py
distributed_cache/cache/: __init__.py  store.py
distributed_cache/cluster/: __init__.py  consistent_hash.py  manager.py  models.py  runtime.py  service.py  transport.py
scripts/: benchmark.py  comprehensive_test.py  failover_mapping_explained.py  metrics_benchmark.sh  metrics_plotter.py  metrics_processor.py  test_lru_cache.py  test_metrics_generation.sh  verify_node_removal.py  verify_rebalancing.py
tests/: test_api.py  test_cache_store.py  test_cluster_service.py  test_consistent_hash.py
