[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-cache"
version = "0.1.0"
description = "A Redis-inspired distributed cache system with sharding, replication, TTL, and LRU eviction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.24,<1.0",
]

[tool.setuptools.packages.find]
include = ["distributed_cache*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
